<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@android:drawable/ic_menu_more"
        android:orderInCategory="101"
        android:title="@string/action_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_setting"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/setmarket"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_comment"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/marketcomment"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/about"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/about"
                app:showAsAction="never|withText" />
        </menu>
    </item>
</menu>
